<resources>
    <string name="app_name">See GO</string>
    <string name="title_activity_maps">See GO</string>
    <string name="search_hashtags">Search hashtags</string>
    <string name="filter_stories">Filter squawks</string>
    <string name="retrievedstory">retrievedStory</string>
    <string name="featured_story">Featured squawk!</string>
    <string name="textview">TextView</string>
    <string name="down_vote">down vote</string>
    <string name="up_vote">up vote</string>
    <string name="share">share</string>
    <string name="insert_caption_here">Insert caption and #hashtags</string>
    <string name="insert_keywords_here">Insert hook</string>
    <string name="Share">Share</string>
    <string name="nextonly">Squawk</string>
    <string name="change_image">Change Picture</string>
    <string name="manage_account">My Profile</string>
    <string name="see_read_stories">See All Read Squawks</string>
    <string name="add_story">Add Squawk</string>
    <string name="reset_map">Reset Map</string>
    <string name="map">Back to Map</string>
    <string name="bookmark_story">Bookmark</string>
    <string name="bookmarked_stories">Bookmarks</string>
    <string name="more_stories">Swipe for more squawks here!</string>
    <string name="delete">Delete squawk</string>
    <string name="caption">caption</string>
    <string name="report"><b>Report</b></string>
    <string name="title_activity_login">Sign in</string>
    <string name="view_on_map">View on map</string>
    <string name="comment_prompt">Comment...</string>
    <string name="event_expires">Event expires:</string>
    <string name="event_image">Event image</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="event_interested">I\'m interested!</string>
    <string name="event_already_interested">Already interested</string>

    <!-- Strings related to login -->
    <string name="login_title">Welcome to See GO</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="prompt_sign_up">Don\'t have an account?</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_username">This username is invalid.</string>
    <string name="error_invalid_user">Incorrect username.</string>
    <string name="error_existing_username">This username is already taken.</string>
    <string name="error_incorrect_email">An account with this email address does not exist.</string>
    <string name="error_invalid_email">Please enter a valid email address.</string>
    <string name="error_existing_email">An account with this email address already exists.</string>
    <string name="error_invalid_password">This password is too short.</string>
    <string name="error_incorrect_password">This password is incorrect.</string>
    <string name="error_field_required">Please fill in all fields.</string>
    <string name="change_password">Change Password</string>
    <string name="action_log_out">Log out</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="import_old_account">Import old account data</string>
    <string name="login_old_account">Login to old account</string>
    <string name="account_not_found">Account not found.</string>
    <string name="transferring_data">Transferring data...</string>


    <string name="kilometres_covered">kilometres covered</string>
    <string name="stories_viewed">squawks found</string>
    <string name="stories_posted">times squawked</string>
    <string name="views_received">views received</string>
    <string name="upvotes_given">upvotes given</string>
    <string name="upvotes_received">upvotes received</string>
    <string name="user_end_message">keep on exploring the world! :)</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Type event description&#x2026;</string>
    <string name="time_picker_event">When does this event expire?</string>
    <string name="create_event">Create Event</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="no">No.</string>
    <string name="my_stories">My squawks</string>
    <string name="invite_friends">Share See GO with friends!</string>


    <string name="message">Message:</string>
    <string name="subject">Subject:</string>
    <string name="send">Send</string>
    <string name="contact_message">Ask any questions and leave any feedback :) We welcome people to join our developers team~ </string>
    <string name="views">views</string>
    <string name="upvotes">upvotes</string>
    <string name="what_is_this_about">What is this about?</string>
    <string name="take_a_survey">Take a Survey instead</string>

    <!-- for future use
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>

    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
     -->

</resources>
