<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImportOldAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/OldAccountSignInHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="36sp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/login_old_account" />

        <EditText
            android:id="@+id/old_account_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:inputType="textPersonName"
            android:hint="@string/prompt_username"
            android:textAlignment="center"
            android:textColorHint="#87adbf"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/old_account_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"
            android:textAlignment="center"
            android:textColorHint="#87adbf"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/login_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:text=""
            android:textColor="#ff0000" />

        <Button
            android:id="@+id/old_account_sign_in_button"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/lessimptroundishbutton"
            android:text="@string/action_sign_in"
            android:textColor="#fafafa" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/transferring_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transferring_data"
                android:visibility="invisible"/>


            <ProgressBar
                android:id="@+id/transferring_progress"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:progress="0"
                android:visibility="invisible"/>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>